@@ -14,9 +14,6 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 **********************************************************************/
-.unselectable-yes .highlighter-popup {
-	display: none;
-}
 #popupmenu .action.removemark {
 	background-image: url(remove.png);
 	background-position: 2px center;
