@@ -1,6 +1,7 @@
 1.1.1: BETA 
      - fixed broken images in ImageInfo extension bug
      - fixed wrong thumbnail toggle state bug in QuickToggle extension
+     - fixed highlighting on unselectable folders is not possible bug
      
 1.1.0: 2015/9/9
      - fixed wrong date format in getlastmodified property using mod_perl/Speedy CGI bug
